<resources>
    <string name="app_name">Ribbit</string>
    <string name="facebook_app_id" translatable="false">487530908496689</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb487530908496689</string>
    <string name="app_google_api_key" translatable="false">AIzaSyA9BLiHtZIj50SWfgefJqK6TNQLQbgvyak</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="home">HOME</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="retry">Retry</string>
    <string name="distance_mile_with_value">%.1f Mi</string>
    <string name="yesterday">Yesterday</string>
    <plurals name="members_with_count">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <plurals name="members_with_count_venue">
        <item quantity="one">%d Active Member</item>
        <item quantity="other">%d Active Members</item>
    </plurals>
    <plurals name="replies_with_count">
        <item quantity="one">%d Reply</item>
        <item quantity="other">%d Replies</item>
    </plurals>
    <plurals name="likes_with_count_in_percent">
        <item quantity="one">%.1f\%% Like</item>
        <item quantity="other">%.1f\%% Likes</item>
    </plurals>
    <plurals name="likes_with_count">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <string name="message_google_maps_is_not_installed">Google maps is not installed. Would you like to install it?</string>
    <string name="message_select_smaller_video">Please select a smaller video. Maximum size should not exceed 200 MB</string>
    <string name="message_select_smaller_image">Please select a smaller image. Maximum size should not exceed 25 MB.</string>
    <string name="media_picker_dialog_capture_image">Capture image from camera</string>
    <string name="media_picker_dialog_capture_video">Capture video from camera</string>
    <string name="media_picker_dialog_gallery_image">Select image from gallery</string>
    <string name="media_picker_dialog_gallery_video">Select video from gallery</string>
    <string name="media_picker_dialog_select_your_choice">Select your choice</string>
    <string name="media_picker_message_please_free_up_space">Please free up some space on device before proceeding</string>
    <string name="permission_btn_allow">Allow</string>
    <string name="permission_btn_deny">Deny</string>
    <string name="permission_btn_cancel">Cancel</string>
    <string name="permission_label_settings">Settings</string>
    <string name="permission_rationale_location">Location permission is required for nearby functionality and recommendations.</string>
    <string name="permission_denied_location">Without the location permission nearby functionality and recommendations will not work properly.</string>
    <string name="permission_never_ask_again_location">You previously selected to never ask again for location permission. You have to manually grant them from the app settings.</string>
    <string name="permission_rationale_camera_storage">Camera and Storage permission is required to access camera and select images from gallery.</string>
    <string name="permission_denied_camera_storage">Without the Camera and Storage permission camera and gallery will not work.</string>
    <string name="permission_never_ask_camera_storage">You previously selected to never ask again for Camera and Storage permission. You have to manually grant them from the app settings.</string>
    <string name="permission_rationale_storage">Storage permission is required to select files from local storage.</string>
    <string name="permission_denied_storage">Without the Storage permission, file selection will not work.</string>
    <string name="permission_never_ask_storage">You previously selected to never ask again for Storage permission. You have to manually grant it from the app settings.</string>
    <string name="permission_rationale_contact">Read Contact permission is required to access contacts for invite.</string>
    <string name="permission_denied_read_contact">Without the Read Contact permission read contact will not work.</string>
    <string name="permission_never_ask_contact">You previously selected to never ask again for Read Contact permission. You have to manually grant them from the app settings.</string>
    <string name="error_check_internet_connection">Please check your internet connection</string>
    <string name="error_api_failure">Unable to connect to the server</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_empty_old_password">Please enter old password</string>
    <string name="error_empty_new_password">Please enter new password</string>
    <string name="error_empty_confirm_password">Please confirm the password</string>
    <string name="error_empty_email">Please enter email</string>
    <string name="error_empty_full_name">Please enter full name</string>
    <string name="error_empty_user_name">Please enter username</string>
    <string name="error_user_name_contains_spaces">Username should not contain whitespace</string>
    <string name="error_invalid_user_name_length">Username should contain at least 6 characters</string>
    <string name="error_invalid_username_characters">Username can contain underscores, periods, dashes and at least one Alphanumeric character</string>
    <string name="error_empty_phone_number">Please enter phone number</string>
    <string name="error_empty_otp">Please enter OTP</string>
    <string name="error_password_does_not_match">Password does not match</string>
    <string name="error_add_profile_image">Please add profile image</string>
    <string name="error_invalid_otp">Please enter valid OTP</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_invalid_website">Please enter valid website url</string>
    <string name="error_invalid_password_length">Password length must be 6 to 20 characters</string>
    <string name="error_invalid_new_password_length">New password length must be 6 to 20 characters</string>
    <string name="error_invalid_phone_number">Please enter valid phone number</string>
    <string name="login_sign_up_label_by_signing_in_you_are_agree">By Signing in you agree to Ribbit’s Terms &amp; conditions and Privacy policy.</string>
    <string name="login_sign_up_label_terms_and_conditions">Terms &amp; conditions</string>
    <string name="login_sign_up_label_privacy_policy">Privacy policy</string>
    <string name="login_sign_up_label_already_a_member_sign_in">Already a member? Sign in</string>
    <string name="login_sign_up_btn_sign_in">Sign in</string>
    <string name="login_sign_up_btn_get_started">Get started</string>
    <string name="login_label_enter_phone_number">Enter phone number</string>
    <string name="login_label_enter_email_id">Enter Email ID</string>
    <string name="login_label_phone_username_or_email">Phone number, username or email</string>
    <string name="login_label_slash">/</string>
    <string name="login_label_welcome">Welcome</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_forgot_password_reset_password">Forgot password? Reset Password</string>
    <string name="login_label_reset_password">Reset Password</string>
    <string name="login_label_or_you_could">or you could</string>
    <string name="login_btn_email_id">Email ID</string>
    <string name="login_btn_phone_number">Phone Number</string>
    <string name="login_btn_continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="login_btn_continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="login_message_reset_password_link_sent">Reset password link has been sent on your email successfully</string>
    <string name="verification_label_verification">Verification</string>
    <string name="verification_label_we_sent_you_a_code_phone">We sent you a code to verify your number</string>
    <string name="verification_label_we_sent_you_a_code_email">We sent you a code to verify your email</string>
    <string name="verification_label_code_sent_to">Code sent to %s</string>
    <string name="verification_label_enter_code">Enter code</string>
    <string name="verification_label_did_not_receive_the_code">Didn’t receive the code yet? Resend code</string>
    <string name="verification_label_resend_code">Resend code</string>
    <string name="verification_message_otp_resent_successfully">OTP has been resent successfully</string>
    <string name="create_password_label_create_password">Create password</string>
    <string name="create_password_label_secure_your_account">Secure your account with a password</string>
    <string name="welcome_label_welcome">Welcome</string>
    <string name="welcome_label_what_s_your_full_name">What’s your Full name?</string>
    <string name="welcome_label_username">Username</string>
    <string name="welcome_label_your_email_id">And your email ID?</string>
    <string name="welcome_label_your_phone_number">And your Phone Number?</string>
    <string name="welcome_label_full_name">Full name</string>
    <string name="welcome_label_enter_username">Enter Username</string>
    <string name="welcome_label_enter_full_name">Enter Full name</string>
    <string name="welcome_label_username_validation_requirements">*Username must contains at least 6 characters containing only alphanumeric, period, hyphen and underscore.</string>
    <string name="choose_interests_label_choose_interests">Tell us about your interests</string>
    <string name="choose_interests_label_choose_at_least">Choose at least 3 interests</string>
    <string name="choose_interests_message_choose_more_interests">Choose at least %d interests</string>
    <string name="venues_btn_filters">Filters</string>
    <string name="create_venue_label_choose_a_category">Choose a category</string>
    <string name="create_venue_label_venues_are_a_fun_and_engaging_way_to_meet_and_explore_people_create_chat_rooms_based_upon_your_location">Venues are a fun and engaging way to meet and explore people. Create chat rooms based upon your location.</string>
    <string name="create_venue_label_create_a_venue">Create a Venue</string>
    <string name="venue_filters_label_date">Date</string>
    <string name="venue_filters_label_privacy">Privacy</string>
    <string name="venue_filters_label_location">Location</string>
    <string name="venue_filters_btn_reset">Reset</string>
    <string name="group_more_options_label_exit">Exit</string>
    <string name="group_more_options_label_share">Share</string>
    <string name="group_more_options_label_channel_chat">Network Chat</string>
    <string name="group_more_options_label_create_post">Create a new post</string>
    <string name="group_more_options_label_channel_detail">Network Detail</string>
    <string name="converse_post_label_create">Create</string>
    <string name="converse_post_label_add_location">Add Location</string>
    <string name="converse_post_label_tap_location">Tap to select location</string>
    <string name="converse_post_label_set_date_time">Set date and time to meet</string>
    <string name="converse_post_label_select_date_time">Select date/time</string>
    <string name="converse_post_label_set_exp_date_time">Set expiration date and time</string>
    <string name="converse_post_label_change">Change</string>
    <string name="media_selector_take_photo">Take Photo</string>
    <string name="media_selector_take_video">Take Video</string>
    <string name="media_selector_select_from_gallery">Select From Gallery</string>
</resources>